# workshop_ws

./: README.md
chatter_cpp/: CMakeLists.txt  package.xml
chatter_cpp/exe/: listener.cpp  listener_node.cpp  talker_node.cpp
chatter_cpp/include/chatter_cpp/: ListenerNode.hpp  TalkerNode.hpp
chatter_cpp/src/: ListenerNode.cpp  TalkerNode.cpp
chatter_py/: package.xml  setup.py
chatter_py/chatter_py/: listener_node.py  talker_node.py
